<resources>
    <string name="app_name">E-learning</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">Elearning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="aviator_yonah">Aviator Yonah</string>
    <string name="sign_in">Kindly <b>sign in</b> to continue</string>
    <string name="title_activity_email_req">Email</string>
    <string name="title_activity_password_req">Password</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_my_account">Account</string>
    <string name="title_activity_my_settings">Settings</string>
    <string name="title_activity_my_notifications">Notifications</string>
    <string name="title_activity_courses">Courses</string>
    <string name="title_activity_exams">Exams</string>
    <string name="title_activity_lab">Lab</string>
    <string name="title_activity_tutor_dashboard">Dashboard</string>
    <string name="title_activity_admin_panel" />
    <string name="simple_easy_learning">SIMPLE EASY LEARNING</string>
    <string name="courses">Courses</string>
    <string name="start">Start</string>
    <string name="andela_learning_exam">Andela Learning Exam</string>
    <string name="aviatoryona_outlook_com">aviatoryona@outlook.com</string>
    <string name="_254_225_225">+254 225 225</string>
    <string name="add_to_group">Add to group</string>
    <string name="show_all_comments">Show all comments</string>
    <string name="follow_me">Follow Me</string>
    <string name="register_now">Not registered? <a href="">Register now</a></string>
    <string name="email">Email</string>
    <string name="hello_aviator_yonah">Hello, Aviator Yonah</string>
    <string name="forgot_password">Forgot password? <a href="">Reset now</a></string>
    <string name="password">Password</string>
    <string name="have_account_go_to_login">Have account? <a href="">Go to login</a></string>
    <string name="account_sign_up">Account Sign up</string>
    <string name="contact">Contact</string>
    <string name="empty" />
    <string name="exams">Exams</string>
    <string name="exam">New Exam</string>
    <string name="course">New Course</string>
    <string-array name="countries">
        <item>Country</item>
        <item>Kenya</item>
        <item>Uganda</item>
        <item>Tanzania</item>
        <item>Rwanda</item>
        <item>Burundi</item>
        <item>Somalia</item>
        <item>Sudan</item>
        <item>S.Sudan</item>
        <item>South Africa</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exam_name">Name</string>
    <string name="next">Next</string>
    <string name="title_activity_tutor_new_course">New Course</string>
    <string name="title_activity_tutor_new_exam">New Exam</string>
    <string name="topics">Topics</string>
    <string name="sub_topics">Sub Topics</string>
    <string name="content">Content</string>
    <string name="enter_content_here">Enter Content here</string>
    <string name="learning_made_simple">LEARNING MADE SIMPLE</string>
    <string name="name">Name</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="theme">Theme</string>
    <string name="network_settings">Network Settings</string>
    <string name="display_lauch_screen">Display lauch screen</string>
    <string name="app_purchases">App purchases</string>
    <string name="explore">Explore</string>
    <string name="title_activity_explore_exam" />
    <string name="title_activity_explore_course" />
    <string name="title_activity_start_exam" />
    <string name="title_activity_topic_content" />
    <string name="question">Question…</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_my_course_exams">My Course Exams</string>
    <string name="title_activity_unlogged_in" />
    <string name="sign_out">Sign out</string>
    <string name="title_activity_video_tutorials" />
    <string name="title_activity_tutor_add_exam_qn_options">Add Exam Options</string>
    <string name="title_activity_admin_manage">Manage</string>
    <string name="title_activity_explore_course_content">Course Content</string>
    <string name="title_activity_basic_search">BasicSearch</string>
    <string-array name="sample_courses">
        <item>Software Testing</item>
        <item>Group Dynamics</item>
        <item>PHP</item>
        <item>Ajax</item>
        <item>Internet Programming</item>
        <item>Systems Project</item>
        <item>Project Risk Management</item>
        <item>User Interface Design</item>
        <item>Systems Engineering</item>
        <item>Human Computer Interaction</item>
        <item>Systems Integration</item>
        <item>Multimedia Systems</item>
    </string-array>
</resources>
