<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_courses"
        android:icon="@drawable/ic_description_black_24dp"
        android:orderInCategory="100"
        android:title="@string/courses"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:orderInCategory="100"
        android:title="@string/empty"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exams"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:orderInCategory="100"
        android:title="@string/exams"
        app:showAsAction="never" />
</menu>
