<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="2dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fbutton_color_wet_asphalt"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/exam"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/rect_dr"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="start"
                    android:hint="@string/exam_name"
                    android:inputType="text"
                    android:paddingBottom="@dimen/fab_margin"
                    android:paddingTop="@dimen/fab_margin"
                    android:textColor="@color/darkPink" />

            </LinearLayout>

            <com.rafakob.drawme.DrawMeButton
                android:id="@+id/btnNxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@string/next"
                app:dm_backColor="@color/fbutton_color_wet_asphalt"
                app:dm_shapeRadiusHalfHeight="true"
                app:dm_textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>