<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    tools:context=".Register"
    tools:showIn="@layout/activity_register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/fab_margin"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="256dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/studentss"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txtHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:paddingTop="20dp"
                    android:text="@string/account_sign_up"
                    android:textColor="@color/colorWhite"
                    android:textSize="35sp"
                    android:visibility="gone" />

            </RelativeLayout>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="-65dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:hint="@string/name"
                            android:inputType="textEmailAddress"
                            android:padding="8dp"
                            android:textColor="@color/colorBlack" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtMail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:padding="8dp"
                            android:textColor="@color/colorBlack" />

                    </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/spinnerCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:entries="@array/countries"
                        android:spinnerMode="dialog" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:hint="@string/contact"
                            android:inputType="phone"
                            android:padding="8dp"
                            android:textColor="@color/colorBlack" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:hint="@string/password"
                            android:inputType="textWebPassword"
                            android:padding="8dp"
                            android:textColor="@color/colorBlack" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/txtLoginNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:gravity="bottom|center_horizontal"
                android:padding="20dp"
                android:text="@string/have_account_go_to_login" />
        </LinearLayout>

        <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
            android:id="@+id/pgLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:type="nexus_rotation_cross" />

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>