<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/window_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MySettings"
    tools:showIn="@layout/activity_my_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">

        <CheckBox
            android:id="@+id/chkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checked="true"
            android:gravity="center_vertical|end"
            android:padding="@dimen/fab_margin"
            android:text="@string/allow_notifications" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:background="@color/grey200" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/theme"
                tools:ignore="RelativeOverlap" />

            <Switch
                android:id="@+id/switchT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:checked="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:background="@color/grey200"
            android:visibility="gone" />

        <Switch
            android:id="@+id/switchLscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="true"
            android:padding="20dp"
            android:text="@string/display_lauch_screen"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:background="@color/grey200" />

        <RelativeLayout
            android:id="@+id/lockRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/app_purchases"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/imgLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:tint="@color/colorBlack"
                app:srcCompat="@drawable/ic_lock_black_24dp"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:background="@color/grey200" />

        <RelativeLayout
            android:id="@+id/lockRhttp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/network_settings"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/imgHttp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:tint="@color/colorBlack"
                app:srcCompat="@drawable/ic_http_black_24dp"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>