<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    tools:context=".EmailReq"
    tools:showIn="@layout/activity_email_req">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/fab_margin"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="256dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/collegestudents"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txtHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="45sp" />

            </RelativeLayout>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="-40dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/fabMail"
                        android:layout_toStartOf="@id/fabMail">

                        <EditText
                            android:id="@+id/edtMail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:textColor="@color/colorBlack" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fabMail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@android:drawable/ic_menu_send" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/txtRegisterNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginTop="80dp"
                android:gravity="bottom|end"
                android:padding="20dp"
                android:text="@string/register_now"
                android:layout_marginEnd="@dimen/fab_margin" />
        </LinearLayout>

        <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
            android:id="@+id/pgLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:type="chrome_floating_circles" />

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>